--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			"postalCode": "33200",
 			"addressCountry": "FR"
 		  },
-		  "url": "url",
+		  "url": "https://nassimfadili.github.io/debbugprojet4/",
 		  "telephone": "+33556677889",
 		  "openingHours": [
 			"Monday at Friday 10:00-19:00"
@@ -34,12 +34,12 @@
 		<meta property="og:type" content="siteweb" />
 		<meta property="og:url" content="https://nassimfadili.github.io/debbugprojet4/" />
 		<meta property="og:description" content="Je suis photographe sur Bordeaux, je réalise vos photos de mariage, d'evenements, de portrait pour les particuliers et professionnels" />
-		<meta property="og:image" content="nina webp"/>
+		<meta property="og:image" content="https://nassimfadili.github.io/debbugprojet4/assets/images/nina.webp"/>
 
 		<meta name="twitter:card" content="summary" />
 		<meta name="twitter:title" content="Nina Carducci, Photographe" />
 		<meta name="twitter:description" content="Je suis photographe sur Bordeaux, je réalise vos photos de mariage, d'evenements, de portrait pour les particuliers et professionnels"/>
-		<meta name="twitter:image" content="image nina.webp" />
+		<meta name="twitter:image" content="https://nassimfadili.github.io/debbugprojet4/assets/images/nina.webp" />
 		<meta name="twitter:url" content="https://nassimfadili.github.io/debbugprojet4/" />
 </head>
 
